more tests for transactions and associated objects